--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #4D8B4C;
+}
+
 ion-toolbar {
     --color: white;
     --background: #4D8B4C;
@@ -20,3 +24,34 @@ ion-title {
     font-size: 48px;
     padding-top: 20px;
 }
+
+ion-card {
+    overflow: scroll;
+    height: 600px;
+    /* Hide scrollbar */
+    -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar { /* Safari & Chrome */
+        display: none;
+    }
+    -ms-overflow-style: none; /* IE 10+ */
+    scrollbar-width: none; /* Firefox */
+    /* Rounded corners */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    margin: 0;
+}
+
+ion-item .date {
+    float: right;
+    align-items: center;
+    display: flex;
+}
+
+ion-item p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 95%;
+  }
