--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -59,4 +59,10 @@ ion-title {
     overflow: hidden;
     white-space: nowrap;
     width: 95%;
-  }
+}
+
+.sidebar-item {
+    --border-radius: 10px;
+    --padding-start: 10px;
+    --padding-end: 10px;
+}
