--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -61,7 +61,7 @@ ion-title {
     width: 95%;
 }
 
-.sidebar-item {
+.home-item, .sidebar-item {
     --border-radius: 10px;
     --padding-start: 10px;
     --padding-end: 10px;
