--- a/src/pages/Profile.module.scss
+++ b/src/pages/Profile.module.scss
@@ -13,6 +13,10 @@
     }
 }
 
+ion-content::part(background) {
+    background: white;
+}
+
 .topHeader {
     height: 30%;
     margin-bottom: -100px;
@@ -36,7 +40,7 @@
     height: 200px;
     border-radius: 100%;
     border-style: solid;
-    border-color: #4D8B4C;
+    border-color: var(--ion-color-main);
     border-width: 2px;
     padding: 5px;
     margin-top: -150px;
@@ -50,41 +54,35 @@
 
 @media only screen and (max-width: 576px) {
     .topHeader {
-        margin-bottom: -80px;
+        height: 25%;
+        margin-bottom: -90px;
     }
     .fakeTop {
         margin-top: 60px;
     }
     .imageset {
-        margin-top: -130px;
-        height: 150px;
-        width: 150px;
+        height: 130px;
+        width: 130px;
         border-radius: 100px;
+        margin-bottom: 5px;
     }
 }
 
 ion-text {
     font-family: Impact 'Arial Narrow Bold';
-}
-
-ion-text h3 {
-    font-size: x-large;
-    font-weight: bold;
+    color: black;
 }
 
 ion-text p {
-    font-weight: normal;
-    font-size: 20px;
+    font-size: large;
 }
 
-.profileOther h3 {
-    font-size: xx-large;
-    line-height: 18px;
+ion-text h3 {
+    font-weight: bold;
 }
 
-.profileOther p {
-    font-size: 23px;
-    line-height: 18px;
+ion-text h4 {
+    font-weight: bold;
 }
 
 .profileOther {
